--- a/2page.html
+++ b/2page.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/2page.css">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>2page</title>
 </head>
 <body>
-
-    <div class="container">
-        <div class="sidebar">
-            <nav>
-                <ul>
-                    <li><a href=""><img src="images/profile-circle-svgrepo-com.svg" alt="" width="15%"></a></li>
-                    <li>
-                        <a style="text-decoration:none" href="">
-                          <img src="images/home-icon-svg-28.jpg" class="icon-small">ホーム
-                        </a>
-                      </li>
-                    <li><a style="text-decoration:none" href="">お問い合わせ</a></li>
-                    <li><a href="login.html"><img src="images/logout.svg" width="2%"></a></li>
-                </ul>
-            </nav>
-        </div>
-       <main class="content">
-        <section class="C">
-            <h2>Junior Content Writer at Dicoding</h2>
-            <br /><br />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, aperiam dolore
-              assumenda velit repellendus recusandae magni consectetur mollitia facere incidunt
-              inventore perspiciatis debitis doloribus ullam minima culpa voluptatem. Repellendus,
-              option.
-            </p>
-            <a href="" class="action-btn">Profile Saya</a>
-          </div>
-        </section>
-
-       </main>
-
-    </div>
-
+  <div class="navigation">
+    <ul>
+      <p class="Menu">Menu</p>
+      <li class="list active">
+        <b></b>
+        <b></b>
+        <a href="">
+          <span class="icon">
+                <ion-icon name="home-outline"></ion-icon>
+          </span>
+          <span class="title">Home</span>
+        </a>
+      </li>
+      <li class="list active">
+        <b></b>
+        <b></b>
+        <a href="">
+          <span class="icon">
+                <ion-icon name="setting-outline"></ion-icon>
+          </span>
+          <span class="title">Setting</span>
+        </a>
+      </li>
+      <li class="list active">
+        <b></b>
+        <b></b>
+        <a href="">
+          <span class="icon">
+                <ion-icon name="logout-outline"></ion-icon>
+          </span>
+          <span class="title">Logout</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="toggle">
+    <ion-icon name="menu-outline" class="open"></ion-icon>
+    <ion-icon name="close-outline" class="close"></ion-icon>
+  </div>
 </body>
 </html>
