--- a/sign-up.html
+++ b/sign-up.html
@@ -1,6 +1,3 @@
-<?php
-session_start();
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,11 +6,11 @@ session_start();
     <link rel="stylesheet" href="./CSS/sign-up.css">
     <title>sign-up</title>
 </head>
-<body>
-<main>
+<body> 
+    <main>
     <div id="DP">
       <ul>
-        <li><img src="./images/profile-circle-svgrepo-com.svg" width="200" alt="Profile"><p id="USER">kokoko</p>  </li>
+        <li><img src="./images/profile-circle-svgrepo-com.svg" width="200" alt="Profile"></li>
         <li><a href="">HOME <img src="./images/home.jpg" width="50" alt="Home"></a></li>
         <li><a href="">Setting</a></li>
         <li><a href="./logout.php">Logout <img src="./images/logout.svg" width="50" alt="Logout"></a></li>
